<resources>
    <string name="app_name">Gurumantra.Online</string>
    <string name="app_name_short">Gurumantra</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="register_text">New Registration? Click Here</string>
    <string name="login_text">Already Registered? Login Here</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_test_series">Test Series</string>
    <string name="title_tests">Tests</string>
    <string name="title_blogs">Blogs</string>
    <string name="logout">Logout</string>
    <string name="join">Join</string>
    <string name="online_test">Online Test</string>
    <string name="information">Information</string>
    <string name="test">Test</string>
    <string name="results">Results</string>
    <string name="instructions">Instructions</string>
    <string name="exam">Exam</string>
    <string name="time">60 min</string>
    <string name="post_comment">Post Comment</string>
    <string name="post">Post</string>
    <string name="menu">Menu</string>
    <string name="gallery">Gallery</string>
    <string name="packages">Packages</string>
    <string name="notes">Library</string>
    <string name="enroll_message">"Want to Enroll Now"</string>
    <string name="practice">Practice Sets</string>
    <string name="pdf">PDF Test</string>
    <string name="answers">Answers</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="courses">Courses</string>
    <string name="lectures">Lectures</string>
    <string name="title_live_class">Live Class</string>
    <string name="buy_now">Buy Now</string>
    <string name="start_course">Start Course</string>
    <string name="scholarship">Scholarship</string>
    <string name="special_offers">Special Offers</string>
    <string name="my_coupons">My coupons</string>
    <string name="search">Search</string>
    <string name="discussion">Discussion Forum</string>
    <string name="profile">Profile</string>
    <string name="sample_notes">Notes</string>
    <string name="postal_course">Postal Course</string>
    <string name="fill">Fill the following details</string>
    <string name="f_name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="continue_order">Continue Order</string>
    <string name="city_village">City/Village</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="more">+ More</string>
    <string name="purchase_batch">Purchase Batch</string>
</resources>