<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_solid"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_library_type"
        android:icon="@drawable/ic_book_reader_solid"
        android:title="@string/notes" />

    <item
        android:id="@+id/navigation_blogs"
        android:icon="@drawable/ic_file_alt_solid"
        android:title="@string/title_blogs" />


    <item
        android:id="@+id/navigation_live_class_type"
        android:icon="@drawable/ic_chalkboard_teacher_solid"
        android:title="@string/lectures" />

    <item
        android:id="@+id/navigation_test_series_type"
        android:icon="@drawable/ic_clipboard_list_solid"
        android:title="@string/title_tests" />


</menu>