<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_live_class"
        android:name="technited.minds.gurumantra.ui.live.LiveClassFragment"
        android:label="@string/title_live_class"
        tools:layout="@layout/fragment_live_class">
        <action
            android:id="@+id/action_navigation_live_class_to_batchDetails"
            app:destination="@id/batchDetails"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/testSeries"
        android:name="technited.minds.gurumantra.ui.test.testseries.TestSeries"
        android:label="@string/title_test_series"
        tools:layout="@layout/fragment_test_series">
        <action
            android:id="@+id/action_testSeries_to_testSeriesDetails"
            app:destination="@id/testSeriesDetails"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/navigation_blogs"
        android:name="technited.minds.gurumantra.ui.blogs.BlogsFragment"
        android:label="@string/title_blogs"
        tools:layout="@layout/fragment_blogs">
        <action
            android:id="@+id/action_navigation_blogs_to_blogDetails"
            app:destination="@id/blogDetails"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_left" />
        <action
            android:id="@+id/action_navigation_blogs_to_discussionDetails"
            app:destination="@id/discussionDetails"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/batchDetails"
        android:name="technited.minds.gurumantra.ui.live.BatchDetails"
        android:label="Batch Details"
        tools:layout="@layout/fragment_batch_details">
        <action
            android:id="@+id/action_batchDetails_to_zoomActivity"
            app:destination="@id/zoomActivity"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <activity
        android:id="@+id/zoomActivity"
        android:name="technited.minds.gurumantra.ui.ZoomActivity"
        android:label="Zoom"
        tools:layout="@layout/activity_zoom">
        <argument
            android:name="classNo"
            app:argType="string" />
    </activity>
    <fragment
        android:id="@+id/testSeriesDetails"
        android:name="technited.minds.gurumantra.ui.test.testseries.TestSeriesDetails"
        android:label="Test Series Details"
        tools:layout="@layout/fragment_test_series_details">
        <action
            android:id="@+id/action_testSeriesDetails_to_navigation_packages"
            app:destination="@id/navigation_packages"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/blogDetails"
        android:name="technited.minds.gurumantra.ui.blogs.BlogDetails"
        android:label="Blog Details"
        tools:layout="@layout/fragment_blog_details" />
    <fragment
        android:id="@+id/discussionDetails"
        android:name="technited.minds.gurumantra.ui.blogs.DiscussionDetails"
        android:label="Discussion Details"
        tools:layout="@layout/fragment_discussion_details" />
    <fragment
        android:id="@+id/navigation_gallery"
        android:name="technited.minds.gurumantra.ui.gallery.GalleryFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/navigation_notes"
        android:name="technited.minds.gurumantra.ui.notes.NotesFragment"
        android:label="@string/notes"
        tools:layout="@layout/fragment_notes" />
    <fragment
        android:id="@+id/navigation_courses"
        android:name="technited.minds.gurumantra.ui.courses.CoursesFragment"
        android:label="@string/courses"
        tools:layout="@layout/fragment_courses">
        <action
            android:id="@+id/action_navigation_courses_to_coursesDetails"
            app:destination="@id/coursesDetails"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/coursesDetails"
        android:name="technited.minds.gurumantra.ui.courses.CourseDetails"
        android:label="Course Details"
        tools:layout="@layout/fragment_courses_details">
        <action
            android:id="@+id/action_coursesDetails_to_navigation_packages"
            app:destination="@id/navigation_packages"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_left" />
        <action
            android:id="@+id/action_coursesDetails_to_play"
            app:destination="@id/Play" />
    </fragment>
    <fragment
        android:id="@+id/navigation_packages"
        android:name="technited.minds.gurumantra.ui.packages.PackagesFragment"
        android:label="@string/packages"
        tools:layout="@layout/fragment_packages" />
    <fragment
        android:id="@+id/navigation_coupons"
        android:name="technited.minds.gurumantra.ui.coupons.CouponsFragment"
        android:label="@string/my_coupons"
        tools:layout="@layout/fragment_coupons" />
    <fragment
        android:id="@+id/navigation_test_series_type"
        android:name="technited.minds.gurumantra.ui.test.testseries.TestSeriesType"
        android:label="Test Series Type"
        tools:layout="@layout/fragment_test_series">
        <action
            android:id="@+id/action_navigation_test_series_type_to_testSeries"
            app:destination="@id/testSeries" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home"
        android:name="technited.minds.gurumantra.ui.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_blogDetails"
            app:destination="@id/blogDetails" />
        <action
            android:id="@+id/action_navigation_home_to_testSeriesDetails"
            app:destination="@id/testSeriesDetails" />
        <action
            android:id="@+id/action_navigation_home_to_batchDetails"
            app:destination="@id/batchDetails" />
    </fragment>
    <activity
        android:id="@+id/Play"
        android:name="technited.minds.gurumantra.ui.Play"
        android:label="Play" >
        <argument
            android:name="url"
            app:argType="string" />
    </activity>
</navigation>