<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="720dp">


            <TextView
                android:id="@+id/welcome_text"
                style="@style/TextGrey.elarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingHorizontal="5dp"
                android:text="@string/fill"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="5dp"
                android:elevation="3dp"
                android:gravity="start|center"
                android:hint="@string/f_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="10dp"
                android:paddingHorizontal="35dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:elevation="3dp"
                android:gravity="start|center"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="10dp"
                android:paddingHorizontal="35dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_call"
                android:drawablePadding="5dp"
                android:elevation="3dp"
                android:gravity="start|center"
                android:hint="@string/mobile"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="10dp"
                android:paddingHorizontal="35dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <EditText
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_home_black_24dp"
                android:drawablePadding="5dp"
                android:elevation="3dp"
                android:gravity="start|center"
                android:hint="@string/address"
                android:imeOptions="normal"
                android:inputType="textMultiLine"
                android:minHeight="64dp"
                android:padding="10dp"
                android:paddingHorizontal="35dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobile" />

            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_home_black_24dp"
                android:drawablePadding="5dp"
                android:elevation="3dp"
                android:gravity="start|center"
                android:hint="@string/city_village"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="10dp"
                android:paddingHorizontal="35dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address" />

            <EditText
                android:id="@+id/district"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_home_black_24dp"
                android:drawablePadding="5dp"
                android:elevation="3dp"
                android:gravity="start|center"
                android:hint="@string/district"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="10dp"
                android:paddingHorizontal="35dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city" />

            <EditText
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_home_black_24dp"
                android:drawablePadding="5dp"
                android:elevation="3dp"
                android:gravity="start|center"
                android:hint="@string/state"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="10dp"
                android:paddingHorizontal="35dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/district" />

            <EditText
                android:id="@+id/postal_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_home_black_24dp"
                android:drawablePadding="5dp"
                android:elevation="3dp"
                android:gravity="start|center"
                android:hint="@string/postal_code"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="10dp"
                android:paddingHorizontal="35dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/state" />

            <Button
                android:id="@+id/continue_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/purple_500"
                android:padding="8dp"
                android:text="@string/continue_order"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/postal_code"
                app:layout_constraintWidth_percent=".5" />


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loader" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>